@@ -18,9 +18,6 @@ import io.camunda.operate.property.OperateProperties;
 import io.camunda.operate.util.TestApplication;
 import io.camunda.operate.util.searchrepository.TestSearchRepository;
 import io.camunda.operate.webapp.reader.FlowNodeInstanceReader;
-import io.camunda.operate.webapp.rest.dto.UserDto;
-import io.camunda.operate.webapp.security.Permission;
-import io.camunda.operate.webapp.security.UserService;
 import io.camunda.operate.webapp.security.tenant.TenantService;
 import io.camunda.operate.webapp.zeebe.operation.adapter.ClientBasedAdapter;
 import io.camunda.operate.webapp.zeebe.operation.adapter.OperateServicesAdapter;
@@ -30,8 +27,10 @@ import io.camunda.operate.webapp.zeebe.operation.process.modify.ModifyProcessZee
 import io.camunda.operate.webapp.zeebe.operation.process.modify.MoveTokenHandler;
 import io.camunda.operate.zeebe.PartitionHolder;
 import io.camunda.operate.zeebeimport.ImportPositionHolder;
+import io.camunda.security.auth.CamundaAuthentication;
+import io.camunda.security.auth.CamundaAuthenticationProvider;
 import io.camunda.webapps.zeebe.StandalonePartitionSupplier;
-import java.util.List;
+import java.util.Collections;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
@@ -64,7 +63,7 @@ import org.springframework.test.context.web.WebAppConfiguration;
 public class OperateZeebeSearchAbstractIT {
 
   // These are mocked so we can bypass authentication issues when connecting to zeebe and search
-  @MockBean protected UserService userService;
+  @MockBean protected CamundaAuthenticationProvider camundaAuthenticationProvider;
   @MockBean protected TenantService tenantService;
 
   // Prevents the zeebe client from being constructed. Components that need to connect to zeebe
@@ -92,9 +91,16 @@ public class OperateZeebeSearchAbstractIT {
   @BeforeAll
   public void beforeAllSetup() {
     // Mocks the authentication for zeebe/search
-    when(userService.getCurrentUser())
+    when(camundaAuthenticationProvider.getCamundaAuthentication())
         .thenReturn(
-            new UserDto().setUserId(DEFAULT_USER).setPermissions(List.of(Permission.WRITE)));
+            new CamundaAuthentication(
+                DEFAULT_USER,
+                null,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyMap()));
     doReturn(TenantService.AuthenticatedTenants.allTenants())
         .when(tenantService)
         .getAuthenticatedTenants();
@@ -135,9 +141,16 @@ public class OperateZeebeSearchAbstractIT {
   public void beforeEach() {
     // Mocks are cleared between each test, reset the authentication mocks so interactions with
     // search don't fail
-    when(userService.getCurrentUser())
+    when(camundaAuthenticationProvider.getCamundaAuthentication())
         .thenReturn(
-            new UserDto().setUserId(DEFAULT_USER).setPermissions(List.of(Permission.WRITE)));
+            new CamundaAuthentication(
+                DEFAULT_USER,
+                null,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyMap()));
     doReturn(TenantService.AuthenticatedTenants.allTenants())
         .when(tenantService)
         .getAuthenticatedTenants();
